opam-version: "1.2"
maintainer: "ilias.gar@gmail.com"
authors: ["Ilias Garnier"]
homepage: "https://github.com/igarnier/huxiang"
bug-reports: "https://github.com/igarnier/huxiang"
dev-repo: "git+https://github.com/igarnier/huxiang"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"                {build}
  "batteries"
  "sodium"
  "lwt"                 {>= "2.7.0"}
  "lwt_ppx"
  "lwt_log"
  "lwt.unix"
  "zmq"
  "zmq-lwt"
  "bin_prot"
  "ppx_bin_prot"
  "ppx_deriving"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
A library for simple communicating state machines over TCP.
"
